--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ilyas -d delivery_db"]
+      test: [ "CMD-SHELL", "pg_isready -U ilyas -d delivery_db" ]
       interval: 5s
       timeout: 5s
       retries: 5
 
-  app:
+  backend:
     build: .
     container_name: delivery_nestjs_backend
     ports:
@@ -30,6 +30,14 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+
+  frontend:
+    build: ./frontend
+    container_name: delivery_nestjs_frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
 
 volumes:
   postgres_data:
